--- a/Loan Approval Pred/loan.ipynb
+++ b/Loan Approval Pred/loan.ipynb
@@ -53,19 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the dataset \n",
-    "df_train= pd.read_csv(\"./playground-series-s4e10/train.csv\")\n",
-    "df_test= pd.read_csv(\"D:/Kaggle/Loan Approval Pred/playground-series-s4e10/test.csv\")\n",
-    "df_sample= pd.read_csv(\"D:/Kaggle/Loan Approval Pred/playground-series-s4e10/sample_submission.csv\")"
+    "df_train= pd.read_csv(\"D:/Projects (Kaggle)/Loan Approval Pred/playground-series-s4e10/train.csv\")\n",
+    "df_test= pd.read_csv(\"D:/Projects (Kaggle)/Loan Approval Pred/playground-series-s4e10/test.csv\")\n",
+    "df_sample= pd.read_csv(\"D:/Projects (Kaggle)/Loan Approval Pred/playground-series-s4e10/sample_submission.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "4                         N                           3            0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "max                     30.000000      1.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        "Name: count, Length: 362, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,21 +1006,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold 1: Train AUC = 0.9825, Validation AUC = 0.9543\n",
-      "Fold 2: Train AUC = 0.9831, Validation AUC = 0.9538\n",
-      "Fold 3: Train AUC = 0.9827, Validation AUC = 0.9593\n",
-      "Fold 4: Train AUC = 0.9828, Validation AUC = 0.9624\n",
-      "Fold 5: Train AUC = 0.9830, Validation AUC = 0.9577\n",
-      "Fold 6: Train AUC = 0.9828, Validation AUC = 0.9610\n",
-      "Fold 7: Train AUC = 0.9832, Validation AUC = 0.9521\n",
-      "Fold 8: Train AUC = 0.9828, Validation AUC = 0.9590\n",
-      "Fold 9: Train AUC = 0.9826, Validation AUC = 0.9658\n",
-      "Fold 10: Train AUC = 0.9827, Validation AUC = 0.9569\n",
-      "Fold 11: Train AUC = 0.9832, Validation AUC = 0.9572\n",
-      "Fold 12: Train AUC = 0.9827, Validation AUC = 0.9599\n",
+      "Fold 1: Train AUC = 0.9826, Validation AUC = 0.9538\n",
+      "Fold 2: Train AUC = 0.9831, Validation AUC = 0.9554\n",
+      "Fold 3: Train AUC = 0.9824, Validation AUC = 0.9582\n",
+      "Fold 4: Train AUC = 0.9823, Validation AUC = 0.9621\n",
+      "Fold 5: Train AUC = 0.9824, Validation AUC = 0.9547\n",
+      "Fold 6: Train AUC = 0.9832, Validation AUC = 0.9555\n",
+      "Fold 7: Train AUC = 0.9835, Validation AUC = 0.9541\n",
+      "Fold 8: Train AUC = 0.9827, Validation AUC = 0.9630\n",
+      "Fold 9: Train AUC = 0.9824, Validation AUC = 0.9569\n",
+      "Fold 10: Train AUC = 0.9830, Validation AUC = 0.9571\n",
+      "Fold 11: Train AUC = 0.9826, Validation AUC = 0.9599\n",
       "\n",
-      "Mean Train AUC: 0.9828\n",
-      "Mean Validation AUC: 0.9583\n"
+      "Mean Train AUC: 0.9827\n",
+      "Mean Validation AUC: 0.9574\n"
      ]
     }
    ],
@@ -1049,79 +1048,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 1: Train AUC = 0.9823, Validation AUC = 0.9565\n",
-      "Fold 2: Train AUC = 0.9821, Validation AUC = 0.9639\n",
-      "Fold 3: Train AUC = 0.9823, Validation AUC = 0.9490\n",
-      "Fold 4: Train AUC = 0.9824, Validation AUC = 0.9502\n",
-      "Fold 5: Train AUC = 0.9822, Validation AUC = 0.9564\n",
-      "Fold 6: Train AUC = 0.9824, Validation AUC = 0.9505\n",
-      "Fold 7: Train AUC = 0.9818, Validation AUC = 0.9634\n",
-      "Fold 8: Train AUC = 0.9821, Validation AUC = 0.9732\n",
-      "Fold 9: Train AUC = 0.9823, Validation AUC = 0.9611\n",
-      "Fold 10: Train AUC = 0.9820, Validation AUC = 0.9675\n",
-      "Fold 11: Train AUC = 0.9819, Validation AUC = 0.9653\n",
-      "Fold 12: Train AUC = 0.9822, Validation AUC = 0.9604\n",
-      "Fold 13: Train AUC = 0.9821, Validation AUC = 0.9543\n",
-      "Fold 14: Train AUC = 0.9822, Validation AUC = 0.9606\n",
-      "Fold 15: Train AUC = 0.9822, Validation AUC = 0.9603\n",
-      "Fold 16: Train AUC = 0.9820, Validation AUC = 0.9549\n",
-      "Fold 17: Train AUC = 0.9820, Validation AUC = 0.9583\n",
-      "Fold 18: Train AUC = 0.9826, Validation AUC = 0.9543\n",
-      "Fold 19: Train AUC = 0.9824, Validation AUC = 0.9557\n",
-      "Fold 20: Train AUC = 0.9821, Validation AUC = 0.9586\n",
-      "Fold 21: Train AUC = 0.9821, Validation AUC = 0.9654\n",
-      "Fold 22: Train AUC = 0.9820, Validation AUC = 0.9717\n",
-      "Fold 23: Train AUC = 0.9825, Validation AUC = 0.9576\n",
-      "Fold 24: Train AUC = 0.9822, Validation AUC = 0.9568\n",
-      "Fold 25: Train AUC = 0.9822, Validation AUC = 0.9634\n",
-      "Fold 26: Train AUC = 0.9820, Validation AUC = 0.9620\n",
-      "Fold 27: Train AUC = 0.9821, Validation AUC = 0.9568\n",
-      "Fold 28: Train AUC = 0.9825, Validation AUC = 0.9540\n",
-      "Fold 29: Train AUC = 0.9824, Validation AUC = 0.9599\n",
-      "Fold 30: Train AUC = 0.9819, Validation AUC = 0.9662\n",
-      "\n",
-      "Mean Train AUC: 0.9822\n",
-      "Mean Validation AUC: 0.9596\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import lightgbm as lgb\n",
+    "# import lightgbm as lgb\n",
     "\n",
-    "# Define LightGBM parameters\n",
-    "LGB_Params = {\n",
-    "    'boosting_type': 'gbdt',\n",
-    "    'max_depth': 11,\n",
-    "    'learning_rate': 0.085,\n",
-    "    'n_estimators': 526,\n",
-    "    'min_child_weight': 7,\n",
-    "    'subsample': 0.971,\n",
-    "    'colsample_bytree': 0.430,\n",
-    "    'reg_alpha': 6.041,\n",
-    "    'reg_lambda': 3.025,\n",
-    "    'scale_pos_weight': 2.230\n",
-    "}\n",
+    "# # Define LightGBM parameters\n",
+    "# LGB_Params = {\n",
+    "#     'boosting_type': 'gbdt',\n",
+    "#     'max_depth': 11,\n",
+    "#     'learning_rate': 0.085,\n",
+    "#     'n_estimators': 526,\n",
+    "#     'min_child_weight': 7,\n",
+    "#     'subsample': 0.971,\n",
+    "#     'colsample_bytree': 0.430,\n",
+    "#     'reg_alpha': 6.041,\n",
+    "#     'reg_lambda': 3.025,\n",
+    "#     'scale_pos_weight': 2.230\n",
+    "# }\n",
     "\n",
-    "# Initialize LightGBM model with parameters\n",
-    "model = lgb.LGBMClassifier(**LGB_Params, random_state=SEED,\n",
-    "                           eval_metric='auc',\n",
-    "                           verbose=-1,\n",
-    "                           device=\"gpu\")\n",
+    "# # Initialize LightGBM model with parameters\n",
+    "# model = lgb.LGBMClassifier(**LGB_Params, random_state=SEED,\n",
+    "#                            eval_metric='auc',\n",
+    "#                            verbose=-1,\n",
+    "#                            device=\"gpu\")\n",
     "\n",
-    "# Train the LightGBM model using your train_model function\n",
-    "trained_model, train_scores, val_scores = train_model(model, X, y)\n"
+    "# # Train the LightGBM model using your train_model function\n",
+    "# trained_model, train_scores, val_scores = train_model(model, X, y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,12 +1188,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Test_pred = trained_model.predict_proba(test)[:, 1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # save the model\n",
+    "# import pickle\n",
+    "# with open('model.pkl', 'wb') as f:\n",
+    "#     pickle.dump(model, f)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['person_age', 'person_income', 'person_home_ownership',\n",
+       "       'person_emp_length', 'loan_intent', 'loan_grade', 'loan_amnt',\n",
+       "       'loan_int_rate', 'loan_percent_income', 'cb_person_default_on_file',\n",
+       "       'cb_person_cred_hist_length'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1261,9 +1255,9 @@
     }
    ],
    "source": [
-    "# sample_submission.head()\n",
-    "submission = trained_model.predict_proba(test)[:, 1]\n",
-    "submission"
+    "# # sample_submission.head()\n",
+    "# submission = trained_model.predict_proba(test)[:, 1]\n",
+    "# submission"
    ]
   },
   {
@@ -1341,8 +1335,8 @@
     }
    ],
    "source": [
-    "df_sample['loan_status'] = submission\n",
-    "df_sample.head()"
+    "# df_sample['loan_status'] = submission\n",
+    "# df_sample.head()"
    ]
   },
   {
@@ -1361,8 +1355,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# New submission\n",
-    "df_sample.to_csv(r\"D:/Kaggle/Loan Approval Pred/playground-series-s4e10/New_submission.csv\", index=False)\n"
+    "# # New submission\n",
+    "# df_sample.to_csv(r\"D:/Kaggle/Loan Approval Pred/playground-series-s4e10/New_submission.csv\", index=False)\n"
    ]
   },
   {
