--- a/Resume NLP Project/Resume_data.ipynb
+++ b/Resume NLP Project/Resume_data.ipynb
@@ -4,6 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img>\n",
+    "<html>\n",
+    "  <head>\n",
+    "  </head>\n",
+    "\n",
+    "  <body>\n",
+    "    <img src=\"image/123.jpg\">\n",
+    "  </body>\n",
+    "</html>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- **About the author:** Sajjad Ali Shah\n",
     "- **LinkedIn:** [LinkedIn Profile](https://www.linkedin.com/in/sajjad-ali-shah47/)\n",
     "- **Dataset link:** [Resume Data](https://www.kaggle.com/datasets/saugataroyarghya/resume-dataset/data)\n",
