--- a/Resume NLP Project/Resume_data.ipynb
+++ b/Resume NLP Project/Resume_data.ipynb
@@ -28,30 +28,413 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv(\"../Resume NLP Project/resume_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>address</th>\n",
+       "      <th>career_objective</th>\n",
+       "      <th>skills</th>\n",
+       "      <th>educational_institution_name</th>\n",
+       "      <th>degree_names</th>\n",
+       "      <th>passing_years</th>\n",
+       "      <th>educational_results</th>\n",
+       "      <th>result_types</th>\n",
+       "      <th>major_field_of_studies</th>\n",
+       "      <th>professional_company_names</th>\n",
+       "      <th>...</th>\n",
+       "      <th>online_links</th>\n",
+       "      <th>issue_dates</th>\n",
+       "      <th>expiry_dates</th>\n",
+       "      <th>﻿job_position_name</th>\n",
+       "      <th>educationaL_requirements</th>\n",
+       "      <th>experiencere_requirement</th>\n",
+       "      <th>age_requirement</th>\n",
+       "      <th>responsibilities.1</th>\n",
+       "      <th>skills_required</th>\n",
+       "      <th>matched_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Big data analytics working and database wareho...</td>\n",
+       "      <td>['Big Data', 'Hadoop', 'Hive', 'Python', 'Mapr...</td>\n",
+       "      <td>['The Amity School of Engineering &amp; Technology...</td>\n",
+       "      <td>['B.Tech']</td>\n",
+       "      <td>['2019']</td>\n",
+       "      <td>['N/A']</td>\n",
+       "      <td>[None]</td>\n",
+       "      <td>['Electronics']</td>\n",
+       "      <td>['Coca-COla']</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Senior Software Engineer</td>\n",
+       "      <td>B.Sc in Computer Science &amp; Engineering from a ...</td>\n",
+       "      <td>At least 1 year</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Technical Support\\nTroubleshooting\\nCollaborat...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.850000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fresher looking to join as a data analyst and ...</td>\n",
+       "      <td>['Data Analysis', 'Data Analytics', 'Business ...</td>\n",
+       "      <td>['Delhi University - Hansraj College', 'Delhi ...</td>\n",
+       "      <td>['B.Sc (Maths)', 'M.Sc (Science) (Statistics)']</td>\n",
+       "      <td>['2015', '2018']</td>\n",
+       "      <td>['N/A', 'N/A']</td>\n",
+       "      <td>['N/A', 'N/A']</td>\n",
+       "      <td>['Mathematics', 'Statistics']</td>\n",
+       "      <td>['BIB Consultancy']</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Machine Learning (ML) Engineer</td>\n",
+       "      <td>M.Sc in Computer Science &amp; Engineering or in a...</td>\n",
+       "      <td>At least 5 year(s)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Machine Learning Leadership\\nCross-Functional ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['Software Development', 'Machine Learning', '...</td>\n",
+       "      <td>['Birla Institute of Technology (BIT), Ranchi']</td>\n",
+       "      <td>['B.Tech']</td>\n",
+       "      <td>['2018']</td>\n",
+       "      <td>['N/A']</td>\n",
+       "      <td>['N/A']</td>\n",
+       "      <td>['Electronics/Telecommunication']</td>\n",
+       "      <td>['Axis Bank Limited']</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Executive/ Senior Executive- Trade Marketing, ...</td>\n",
+       "      <td>Master of Business Administration (MBA)</td>\n",
+       "      <td>At least 3 years</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Trade Marketing Executive\\nBrand Visibility, S...</td>\n",
+       "      <td>Brand Promotion\\nCampaign Management\\nField Su...</td>\n",
+       "      <td>0.416667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>To obtain a position in a fast-paced business ...</td>\n",
+       "      <td>['accounts payables', 'accounts receivables', ...</td>\n",
+       "      <td>['Martinez Adult Education, Business Training ...</td>\n",
+       "      <td>['Computer Applications Specialist Certificate...</td>\n",
+       "      <td>['2008']</td>\n",
+       "      <td>[None]</td>\n",
+       "      <td>[None]</td>\n",
+       "      <td>['Computer Applications']</td>\n",
+       "      <td>['Company Name ï¼ City , State', 'Company Name...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Business Development Executive</td>\n",
+       "      <td>Bachelor/Honors</td>\n",
+       "      <td>1 to 3 years</td>\n",
+       "      <td>Age 22 to 30 years</td>\n",
+       "      <td>Apparel Sourcing\\nQuality Garment Sourcing\\nRe...</td>\n",
+       "      <td>Fast typing skill\\nIELTSInternet browsing &amp; on...</td>\n",
+       "      <td>0.760000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Professional accountant with an outstanding wo...</td>\n",
+       "      <td>['Analytical reasoning', 'Compliance testing k...</td>\n",
+       "      <td>['Kent State University']</td>\n",
+       "      <td>['Bachelor of Business Administration']</td>\n",
+       "      <td>[None]</td>\n",
+       "      <td>['3.84']</td>\n",
+       "      <td>[None]</td>\n",
+       "      <td>['Accounting']</td>\n",
+       "      <td>['Company Name', 'Company Name', 'Company Name...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[None]</td>\n",
+       "      <td>[None]</td>\n",
+       "      <td>['February 15, 2021']</td>\n",
+       "      <td>Senior iOS Engineer</td>\n",
+       "      <td>Bachelor of Science (BSc) in Computer Science</td>\n",
+       "      <td>At least 4 years</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>iOS Lifecycle\\nRequirement Analysis\\nNative Fr...</td>\n",
+       "      <td>iOS\\niOS App Developer\\niOS Application Develo...</td>\n",
+       "      <td>0.650000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  address                                   career_objective  \\\n",
+       "0     NaN  Big data analytics working and database wareho...   \n",
+       "1     NaN  Fresher looking to join as a data analyst and ...   \n",
+       "2     NaN                                                NaN   \n",
+       "3     NaN  To obtain a position in a fast-paced business ...   \n",
+       "4     NaN  Professional accountant with an outstanding wo...   \n",
+       "\n",
+       "                                              skills  \\\n",
+       "0  ['Big Data', 'Hadoop', 'Hive', 'Python', 'Mapr...   \n",
+       "1  ['Data Analysis', 'Data Analytics', 'Business ...   \n",
+       "2  ['Software Development', 'Machine Learning', '...   \n",
+       "3  ['accounts payables', 'accounts receivables', ...   \n",
+       "4  ['Analytical reasoning', 'Compliance testing k...   \n",
+       "\n",
+       "                        educational_institution_name  \\\n",
+       "0  ['The Amity School of Engineering & Technology...   \n",
+       "1  ['Delhi University - Hansraj College', 'Delhi ...   \n",
+       "2    ['Birla Institute of Technology (BIT), Ranchi']   \n",
+       "3  ['Martinez Adult Education, Business Training ...   \n",
+       "4                          ['Kent State University']   \n",
+       "\n",
+       "                                        degree_names     passing_years  \\\n",
+       "0                                         ['B.Tech']          ['2019']   \n",
+       "1    ['B.Sc (Maths)', 'M.Sc (Science) (Statistics)']  ['2015', '2018']   \n",
+       "2                                         ['B.Tech']          ['2018']   \n",
+       "3  ['Computer Applications Specialist Certificate...          ['2008']   \n",
+       "4            ['Bachelor of Business Administration']            [None]   \n",
+       "\n",
+       "  educational_results    result_types             major_field_of_studies  \\\n",
+       "0             ['N/A']          [None]                    ['Electronics']   \n",
+       "1      ['N/A', 'N/A']  ['N/A', 'N/A']      ['Mathematics', 'Statistics']   \n",
+       "2             ['N/A']         ['N/A']  ['Electronics/Telecommunication']   \n",
+       "3              [None]          [None]          ['Computer Applications']   \n",
+       "4            ['3.84']          [None]                     ['Accounting']   \n",
+       "\n",
+       "                          professional_company_names  ... online_links  \\\n",
+       "0                                      ['Coca-COla']  ...          NaN   \n",
+       "1                                ['BIB Consultancy']  ...          NaN   \n",
+       "2                              ['Axis Bank Limited']  ...          NaN   \n",
+       "3  ['Company Name ï¼ City , State', 'Company Name...  ...          NaN   \n",
+       "4  ['Company Name', 'Company Name', 'Company Name...  ...       [None]   \n",
+       "\n",
+       "  issue_dates           expiry_dates  \\\n",
+       "0         NaN                    NaN   \n",
+       "1         NaN                    NaN   \n",
+       "2         NaN                    NaN   \n",
+       "3         NaN                    NaN   \n",
+       "4      [None]  ['February 15, 2021']   \n",
+       "\n",
+       "                                  ﻿job_position_name  \\\n",
+       "0                           Senior Software Engineer   \n",
+       "1                     Machine Learning (ML) Engineer   \n",
+       "2  Executive/ Senior Executive- Trade Marketing, ...   \n",
+       "3                     Business Development Executive   \n",
+       "4                                Senior iOS Engineer   \n",
+       "\n",
+       "                            educationaL_requirements experiencere_requirement  \\\n",
+       "0  B.Sc in Computer Science & Engineering from a ...          At least 1 year   \n",
+       "1  M.Sc in Computer Science & Engineering or in a...       At least 5 year(s)   \n",
+       "2            Master of Business Administration (MBA)         At least 3 years   \n",
+       "3                                    Bachelor/Honors             1 to 3 years   \n",
+       "4      Bachelor of Science (BSc) in Computer Science         At least 4 years   \n",
+       "\n",
+       "      age_requirement                                 responsibilities.1  \\\n",
+       "0                 NaN  Technical Support\\nTroubleshooting\\nCollaborat...   \n",
+       "1                 NaN  Machine Learning Leadership\\nCross-Functional ...   \n",
+       "2                 NaN  Trade Marketing Executive\\nBrand Visibility, S...   \n",
+       "3  Age 22 to 30 years  Apparel Sourcing\\nQuality Garment Sourcing\\nRe...   \n",
+       "4                 NaN  iOS Lifecycle\\nRequirement Analysis\\nNative Fr...   \n",
+       "\n",
+       "                                     skills_required matched_score  \n",
+       "0                                                NaN      0.850000  \n",
+       "1                                                NaN      0.750000  \n",
+       "2  Brand Promotion\\nCampaign Management\\nField Su...      0.416667  \n",
+       "3  Fast typing skill\\nIELTSInternet browsing & on...      0.760000  \n",
+       "4  iOS\\niOS App Developer\\niOS Application Develo...      0.650000  \n",
+       "\n",
+       "[5 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9544 entries, 0 to 9543\n",
+      "Data columns (total 35 columns):\n",
+      " #   Column                               Non-Null Count  Dtype  \n",
+      "---  ------                               --------------  -----  \n",
+      " 0   address                              784 non-null    object \n",
+      " 1   career_objective                     4740 non-null   object \n",
+      " 2   skills                               9488 non-null   object \n",
+      " 3   educational_institution_name         9460 non-null   object \n",
+      " 4   degree_names                         9460 non-null   object \n",
+      " 5   passing_years                        9460 non-null   object \n",
+      " 6   educational_results                  9460 non-null   object \n",
+      " 7   result_types                         9460 non-null   object \n",
+      " 8   major_field_of_studies               9460 non-null   object \n",
+      " 9   professional_company_names           9460 non-null   object \n",
+      " 10  company_urls                         9460 non-null   object \n",
+      " 11  start_dates                          9460 non-null   object \n",
+      " 12  end_dates                            9460 non-null   object \n",
+      " 13  related_skils_in_job                 9460 non-null   object \n",
+      " 14  positions                            9460 non-null   object \n",
+      " 15  locations                            9460 non-null   object \n",
+      " 16  responsibilities                     9544 non-null   object \n",
+      " 17  extra_curricular_activity_types      3426 non-null   object \n",
+      " 18  extra_curricular_organization_names  3426 non-null   object \n",
+      " 19  extra_curricular_organization_links  3426 non-null   object \n",
+      " 20  role_positions                       3426 non-null   object \n",
+      " 21  languages                            700 non-null    object \n",
+      " 22  proficiency_levels                   700 non-null    object \n",
+      " 23  certification_providers              2008 non-null   object \n",
+      " 24  certification_skills                 2008 non-null   object \n",
+      " 25  online_links                         2008 non-null   object \n",
+      " 26  issue_dates                          2008 non-null   object \n",
+      " 27  expiry_dates                         2008 non-null   object \n",
+      " 28  ﻿job_position_name                   9544 non-null   object \n",
+      " 29  educationaL_requirements             9544 non-null   object \n",
+      " 30  experiencere_requirement             8180 non-null   object \n",
+      " 31  age_requirement                      5457 non-null   object \n",
+      " 32  responsibilities.1                   9544 non-null   object \n",
+      " 33  skills_required                      7843 non-null   object \n",
+      " 34  matched_score                        9544 non-null   float64\n",
+      "dtypes: float64(1), object(34)\n",
+      "memory usage: 2.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9544, 35)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "101704"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum().sum()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "MLD",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
