--- a/Resume NLP Project/Resume_data.ipynb
+++ b/Resume NLP Project/Resume_data.ipynb
@@ -22,9 +22,43 @@
     "<a id=\"library\"></a>\n",
     "<div style=\"background-color:#229799; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
     "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\"></span> Import Libraries\n",
+    "        <span style=\"font-size:25px;\"></span> Intro of the Data\n",
     "    </h2>\n",
     "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🚀 Resume Parsing Dataset by Neuralframe AI  \n",
+    "\n",
+    "## 📌 About the Dataset  \n",
+    "This **comprehensive dataset**, curated and processed by **Neuralframe AI**, is designed for **resume parsing, candidate profiling, and job matching applications**. It contains structured information such as:  \n",
+    "\n",
+    "✅ **Career Objectives**  \n",
+    "✅ **Skills & Expertise**  \n",
+    "✅ **Education & Certifications**  \n",
+    "✅ **Work Experience**  \n",
+    "✅ **Projects & Achievements**  \n",
+    "\n",
+    "📢 The data has been sourced from **open platforms** and **Neuralframe AI's proprietary sources**, with **explicit consent** from contributors.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🏆 Featured in Datathon @ Bitfest 2025  \n",
+    "This dataset was **first utilized** in the **Datathon Competition** at **Bitfest 2025**, enabling participants to develop and refine:  \n",
+    "\n",
+    "🔹 **Resume Parsing Algorithms**  \n",
+    "🔹 **Candidate Evaluation Models**  \n",
+    "🔹 **Job Matching Systems**  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🎯 Get Started!  \n",
+    "Feel free to **explore, analyze, and innovate** with this dataset. If you find it **helpful or insightful**, consider **giving it an upvote**! 👍  \n",
+    "\n",
+    "**Thank You! 🚀**  \n"
    ]
   },
   {
