--- a/Resume NLP Project/Resume_data.ipynb
+++ b/Resume NLP Project/Resume_data.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "<a id=\"library\"></a>\n",
-    "<div style=\"background-color:#229799; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "<div style=\"background-color:#3C0753; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
     "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
     "        <span style=\"font-size:25px;\"></span> Intro of the Data\n",
     "    </h2>\n",
