--- a/Loan Approval Pred/loan.ipynb
+++ b/Loan Approval Pred/loan.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img>\n",
+    "<!-- <img>\n",
     "<html>\n",
     "  <head>\n",
     "  </head>\n",
@@ -12,7 +12,7 @@
     "  <body>\n",
     "    <img src=\"image/ai.jpg\">\n",
     "  </body>\n",
-    "</html>"
+    "</html> -->"
    ]
   },
   {
