--- a/Resume NLP Project/Resume_data.ipynb
+++ b/Resume NLP Project/Resume_data.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "(9544, 35)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,10 @@
     {
      "data": {
       "text/plain": [
-       "101704"
+       "skills\n",
+       "False    9488\n",
+       "True       56\n",
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 15,
@@ -453,7 +456,62 @@
     }
    ],
    "source": [
-    "df.isnull().sum().sum()"
+    "df.isnull()[\"skills\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "address                                91.785415\n",
+       "career_objective                       50.335289\n",
+       "skills                                  0.586756\n",
+       "educational_institution_name            0.880134\n",
+       "degree_names                            0.880134\n",
+       "passing_years                           0.880134\n",
+       "educational_results                     0.880134\n",
+       "result_types                            0.880134\n",
+       "major_field_of_studies                  0.880134\n",
+       "professional_company_names              0.880134\n",
+       "company_urls                            0.880134\n",
+       "start_dates                             0.880134\n",
+       "end_dates                               0.880134\n",
+       "related_skils_in_job                    0.880134\n",
+       "positions                               0.880134\n",
+       "locations                               0.880134\n",
+       "responsibilities                        0.000000\n",
+       "extra_curricular_activity_types        64.103101\n",
+       "extra_curricular_organization_names    64.103101\n",
+       "extra_curricular_organization_links    64.103101\n",
+       "role_positions                         64.103101\n",
+       "languages                              92.665549\n",
+       "proficiency_levels                     92.665549\n",
+       "certification_providers                78.960604\n",
+       "certification_skills                   78.960604\n",
+       "online_links                           78.960604\n",
+       "issue_dates                            78.960604\n",
+       "expiry_dates                           78.960604\n",
+       "﻿job_position_name                      0.000000\n",
+       "educationaL_requirements                0.000000\n",
+       "experiencere_requirement               14.291702\n",
+       "age_requirement                        42.822716\n",
+       "responsibilities.1                      0.000000\n",
+       "skills_required                        17.822716\n",
+       "matched_score                           0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum() /len(df) * 100\n"
    ]
   },
   {
@@ -461,12 +519,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MLD",
+   "display_name": "ml_env",
    "language": "python",
    "name": "python3"
   },
@@ -480,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
