--- a/Resume NLP Project/Resume_data.ipynb
+++ b/Resume NLP Project/Resume_data.ipynb
@@ -677,34 +677,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Filling tjhe missing values by scikit learn imputer of all the missig values\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimpute\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SimpleImputer\n\u001b[0;32m      3\u001b[0m imputer \u001b[38;5;241m=\u001b[39m SimpleImputer(strategy\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmost_frequent\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(imputer\u001b[38;5;241m.\u001b[39mfit_transform(df),columns\u001b[38;5;241m=\u001b[39mdf\u001b[38;5;241m.\u001b[39mcolumns)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Filling tjhe missing values by scikit learn imputer of all the missig values\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "imputer = SimpleImputer(strategy='most_frequent')\n",
-    "df = pd.DataFrame(imputer.fit_transform(df),columns=df.columns)\n"
+    "from sklearn.impute import SimpleImputer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "imputer = SimpleImputer(strategy='most_frequent')\n",
+    "df = pd.DataFrame(imputer.fit_transform(df),columns=df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Lets check again the missing values\n",
+    "df.isnull().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['skills', 'educational_institution_name', 'degree_names',\n",
+      "       'passing_years', 'educational_results', 'result_types',\n",
+      "       'major_field_of_studies', 'professional_company_names', 'company_urls',\n",
+      "       'start_dates', 'end_dates', 'related_skils_in_job', 'positions',\n",
+      "       'locations', 'responsibilities', '﻿job_position_name',\n",
+      "       'educationaL_requirements', 'experiencere_requirement',\n",
+      "       'responsibilities.1', 'skills_required', 'matched_score'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.columns)"
+   ]
   },
   {
    "cell_type": "code",
