--- a/Resume NLP Project/Resume_data.ipynb
+++ b/Resume NLP Project/Resume_data.ipynb
@@ -602,6 +602,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'No duplicate values'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check the duplicate of the data\n",
+    "def check_duplicate(data):\n",
+    "    duplicate=data.duplicated().sum()\n",
+    "    if duplicate==0:\n",
+    "        return \"No duplicate values\"\n",
+    "    else:\n",
+    "        return \"Duplicate values\"\n",
+    "check_duplicate(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
