--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -12113,7 +12113,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MLD",
+   "display_name": "ml_env",
    "language": "python",
    "name": "python3"
   },
@@ -12127,7 +12127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
