--- a/Time Serires Hourly Energy Consumption/Time_series.ipynb
+++ b/Time Serires Hourly Energy Consumption/Time_series.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "https://www.kaggle.com/datasets/robikscube/hourly-energy-consumption/code"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -13,7 +11,7 @@
    "source": [
     "- **About the author:** Sajjad Ali Shah\n",
     "- **LinkedIn:** [LinkedIn Profile](https://www.linkedin.com/in/sajjad-ali-shah47/)\n",
-    "- **Dataset link:** [Resume Data](https://www.kaggle.com/datasets/saugataroyarghya/resume-dataset/data)\n",
+    "- **Dataset link:** [Hourly Energy Consumption](https://www.kaggle.com/datasets/robikscube/hourly-energy-consumption/data)\n",
     "\n",
     "---"
    ]
