--- a/Time Serires Hourly Energy Consumption/Time_series.ipynb
+++ b/Time Serires Hourly Energy Consumption/Time_series.ipynb
@@ -76,6 +76,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the data\n",
+    "pjme=pd.read_csv('./Data/PJME_hourly.csv',index_col=[0],parse_dates=[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
