--- a/Time Serires Hourly Energy Consumption/Time_series.ipynb
+++ b/Time Serires Hourly Energy Consumption/Time_series.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,19 +76,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data\n",
-    "pjme=pd.read_csv('./Data/PJME_hourly.csv',index_col=[0],parse_dates=[0])\n",
-    "aep=pd.read_csv('./Data/AEP_hourly.csv',index_col=[0],parse_dates=[0])\n",
-    "comed=pd.read_csv('./Data/COMED_hourly.csv',index_col=[0],parse_dates=[0])\n"
+    "PJME_hourly=pd.read_csv('./Data/PJME_hourly.csv',index_col=[0],parse_dates=[0])\n",
+    "AEP_hourly=pd.read_csv('./Data/AEP_hourly.csv',index_col=[0],parse_dates=[0])\n",
+    "COMED_hourly=pd.read_csv('./Data/COMED_hourly.csv',index_col=[0],parse_dates=[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -154,14 +154,32 @@
        "2002-12-31 05:00:00  24860.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check the data\n",
-    "pjme.head()"
+    "PJME_hourly.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of the data: 145366 rows and 1 columns\n"
+     ]
+    }
+   ],
+   "source": [
+    "# shape of the data\n",
+    "print(\"Shape of the data:\", PJME_hourly.shape[0],\"rows and\",PJME_hourly.shape[1],\"columns\")"
    ]
   },
   {
