--- a/Time Serires Hourly Energy Consumption/Time_series.ipynb
+++ b/Time Serires Hourly Energy Consumption/Time_series.ipynb
@@ -19,6 +19,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"library\"></a>\n",
+    "<div style=\"background-color:#3C0753; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\"></span> Intro of the Data\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# PJM Hourly Energy Consumption Data\n",
     "\n",
     "## About the Dataset  \n",
@@ -59,6 +71,18 @@
     "- **Dataset link:** [Hourly Energy Consumption](https://www.kaggle.com/datasets/robikscube/hourly-energy-consumption/data)\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"library\"></a>\n",
+    "<div style=\"background-color:#3C0753; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\"></span> Import Library\n",
+    "    </h2>\n",
+    "</div>\n"
    ]
   },
   {
@@ -184,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -197,12 +221,12 @@
    ],
    "source": [
     "# shape of the data\n",
-    "print(\"Shape of the data:\", pjme.shape[0],\"rows and\",pjme.shape[1],\"columns\")"
+    "print(\"Shape of the data:\", PJME_hourly.shape[0],\"rows and\",PJME_hourly.shape[1],\"columns\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -222,12 +246,12 @@
    ],
    "source": [
     "# info of the data\n",
-    "pjme.info()"
+    "PJME_hourly.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +268,7 @@
    "source": [
     "# plot the data\n",
     "plt.figure(figsize=(15,5))\n",
-    "plt.plot(pjme.index,pjme['PJME_MW'])\n",
+    "plt.plot(PJME_hourly.index,PJME_hourly['PJME_MW'])\n",
     "plt.title('PJME hourly power consumption data')\n",
     "plt.ylabel('Power')\n",
     "plt.xlabel('Time')\n",
