--- a/Time Serires Hourly Energy Consumption/Time_series.ipynb
+++ b/Time Serires Hourly Energy Consumption/Time_series.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "2002-12-31 05:00:00  24860.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,6 +186,83 @@
    "source": [
     "# Check the data\n",
     "PJME_hourly.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AEP_MW</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Datetime</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2004-12-31 01:00:00</th>\n",
+       "      <td>13478.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-12-31 02:00:00</th>\n",
+       "      <td>12865.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-12-31 03:00:00</th>\n",
+       "      <td>12577.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-12-31 04:00:00</th>\n",
+       "      <td>12517.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-12-31 05:00:00</th>\n",
+       "      <td>12670.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      AEP_MW\n",
+       "Datetime                    \n",
+       "2004-12-31 01:00:00  13478.0\n",
+       "2004-12-31 02:00:00  12865.0\n",
+       "2004-12-31 03:00:00  12577.0\n",
+       "2004-12-31 04:00:00  12517.0\n",
+       "2004-12-31 05:00:00  12670.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AEP_hourly.head()"
    ]
   },
   {
