--- a/Binary Prediction with a Rainfall/rainfall_code.ipynb
+++ b/Binary Prediction with a Rainfall/rainfall_code.ipynb
@@ -4,18 +4,398 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.kaggle.com/code/sunilkumarmuduli/deployment-streamlit-cnn-for-good-resume"
+    "https://www.kaggle.com/code/sunilkumarmuduli/deployment-streamlit-cnn-for-good-resume\n",
+    "\n",
+    "2. https://www.kaggle.com/competitions/playground-series-s5e3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Binray Predication With Rainfall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import libraries \n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test=pd.read_csv(\"./data/test.csv\")\n",
+    "df_train=pd.read_csv(\"./data/train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of the Test data is  (730, 12)\n",
+      "-----------------------------------\n",
+      "Shape of the Train data is (2190, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check the shape of the data\n",
+    "print(f\"Shape of the Test data is  {df_test.shape}\")\n",
+    "print(\"-\"*35)\n",
+    "print(f\"Shape of the Train data is {df_train.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>day</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>maxtemp</th>\n",
+       "      <th>temparature</th>\n",
+       "      <th>mintemp</th>\n",
+       "      <th>dewpoint</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>cloud</th>\n",
+       "      <th>sunshine</th>\n",
+       "      <th>winddirection</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>rainfall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2190.000000</td>\n",
+       "      <td>2190.000000</td>\n",
+       "      <td>2190.000000</td>\n",
+       "      <td>2190.000000</td>\n",
+       "      <td>2190.000000</td>\n",
+       "      <td>2190.000000</td>\n",
+       "      <td>2190.000000</td>\n",
+       "      <td>2190.000000</td>\n",
+       "      <td>2190.000000</td>\n",
+       "      <td>2190.000000</td>\n",
+       "      <td>2190.000000</td>\n",
+       "      <td>2190.000000</td>\n",
+       "      <td>2190.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1094.500000</td>\n",
+       "      <td>179.948402</td>\n",
+       "      <td>1013.602146</td>\n",
+       "      <td>26.365799</td>\n",
+       "      <td>23.953059</td>\n",
+       "      <td>22.170091</td>\n",
+       "      <td>20.454566</td>\n",
+       "      <td>82.036530</td>\n",
+       "      <td>75.721918</td>\n",
+       "      <td>3.744429</td>\n",
+       "      <td>104.863151</td>\n",
+       "      <td>21.804703</td>\n",
+       "      <td>0.753425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>632.342866</td>\n",
+       "      <td>105.203592</td>\n",
+       "      <td>5.655366</td>\n",
+       "      <td>5.654330</td>\n",
+       "      <td>5.222410</td>\n",
+       "      <td>5.059120</td>\n",
+       "      <td>5.288406</td>\n",
+       "      <td>7.800654</td>\n",
+       "      <td>18.026498</td>\n",
+       "      <td>3.626327</td>\n",
+       "      <td>80.002416</td>\n",
+       "      <td>9.898659</td>\n",
+       "      <td>0.431116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>999.000000</td>\n",
+       "      <td>10.400000</td>\n",
+       "      <td>7.400000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>-0.300000</td>\n",
+       "      <td>39.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>4.400000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>547.250000</td>\n",
+       "      <td>89.000000</td>\n",
+       "      <td>1008.600000</td>\n",
+       "      <td>21.300000</td>\n",
+       "      <td>19.300000</td>\n",
+       "      <td>17.700000</td>\n",
+       "      <td>16.800000</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>14.125000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1094.500000</td>\n",
+       "      <td>178.500000</td>\n",
+       "      <td>1013.000000</td>\n",
+       "      <td>27.800000</td>\n",
+       "      <td>25.500000</td>\n",
+       "      <td>23.850000</td>\n",
+       "      <td>22.150000</td>\n",
+       "      <td>82.000000</td>\n",
+       "      <td>83.000000</td>\n",
+       "      <td>2.400000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>20.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1641.750000</td>\n",
+       "      <td>270.000000</td>\n",
+       "      <td>1017.775000</td>\n",
+       "      <td>31.200000</td>\n",
+       "      <td>28.400000</td>\n",
+       "      <td>26.400000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>6.800000</td>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>27.900000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2189.000000</td>\n",
+       "      <td>365.000000</td>\n",
+       "      <td>1034.600000</td>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>31.500000</td>\n",
+       "      <td>29.800000</td>\n",
+       "      <td>26.700000</td>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>12.100000</td>\n",
+       "      <td>300.000000</td>\n",
+       "      <td>59.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                id          day     pressure      maxtemp  temparature  \\\n",
+       "count  2190.000000  2190.000000  2190.000000  2190.000000  2190.000000   \n",
+       "mean   1094.500000   179.948402  1013.602146    26.365799    23.953059   \n",
+       "std     632.342866   105.203592     5.655366     5.654330     5.222410   \n",
+       "min       0.000000     1.000000   999.000000    10.400000     7.400000   \n",
+       "25%     547.250000    89.000000  1008.600000    21.300000    19.300000   \n",
+       "50%    1094.500000   178.500000  1013.000000    27.800000    25.500000   \n",
+       "75%    1641.750000   270.000000  1017.775000    31.200000    28.400000   \n",
+       "max    2189.000000   365.000000  1034.600000    36.000000    31.500000   \n",
+       "\n",
+       "           mintemp     dewpoint     humidity        cloud     sunshine  \\\n",
+       "count  2190.000000  2190.000000  2190.000000  2190.000000  2190.000000   \n",
+       "mean     22.170091    20.454566    82.036530    75.721918     3.744429   \n",
+       "std       5.059120     5.288406     7.800654    18.026498     3.626327   \n",
+       "min       4.000000    -0.300000    39.000000     2.000000     0.000000   \n",
+       "25%      17.700000    16.800000    77.000000    69.000000     0.400000   \n",
+       "50%      23.850000    22.150000    82.000000    83.000000     2.400000   \n",
+       "75%      26.400000    25.000000    88.000000    88.000000     6.800000   \n",
+       "max      29.800000    26.700000    98.000000   100.000000    12.100000   \n",
+       "\n",
+       "       winddirection    windspeed     rainfall  \n",
+       "count    2190.000000  2190.000000  2190.000000  \n",
+       "mean      104.863151    21.804703     0.753425  \n",
+       "std        80.002416     9.898659     0.431116  \n",
+       "min        10.000000     4.400000     0.000000  \n",
+       "25%        40.000000    14.125000     1.000000  \n",
+       "50%        70.000000    20.500000     1.000000  \n",
+       "75%       200.000000    27.900000     1.000000  \n",
+       "max       300.000000    59.500000     1.000000  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.isnull().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'day', 'pressure', 'maxtemp', 'temparature', 'mintemp',\n",
+       "       'dewpoint', 'humidity', 'cloud', 'sunshine', 'winddirection',\n",
+       "       'windspeed', 'rainfall'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "day\n",
+       "6      7\n",
+       "7      7\n",
+       "8      7\n",
+       "9      7\n",
+       "22     7\n",
+       "      ..\n",
+       "344    5\n",
+       "345    5\n",
+       "363    5\n",
+       "364    5\n",
+       "365    5\n",
+       "Name: count, Length: 365, dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train[\"day\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ml_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
