--- a/Binary Prediction with a Rainfall/rainfall_code.ipynb
+++ b/Binary Prediction with a Rainfall/rainfall_code.ipynb
@@ -373,6 +373,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cloud\n",
+       "2.0      0\n",
+       "7.0      0\n",
+       "11.0     0\n",
+       "17.0     0\n",
+       "19.0     0\n",
+       "        ..\n",
+       "95.0     1\n",
+       "96.0     1\n",
+       "97.0     1\n",
+       "99.0     1\n",
+       "100.0    1\n",
+       "Name: rainfall, Length: 78, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Grouby by cloud with day\n",
+    "df_train.groupby(\"cloud\")[\"rainfall\"].max()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
