--- a/molecular-machine-learning/molecular.ipynb
+++ b/molecular-machine-learning/molecular.ipynb
@@ -1,6 +1,93 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "351b80b2",
+   "metadata": {},
+   "source": [
+    "<img>\n",
+    "<html>\n",
+    "  <head>\n",
+    "  </head>\n",
+    "\n",
+    "  <body>\n",
+    "    <img src=\"image/molecule image.jpg\">\n",
+    "  </body>\n",
+    "</html>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e346e6b",
+   "metadata": {},
+   "source": [
+    "# Overview\n",
+    "\n",
+    "A common challenge in experimental chemistry is inferring causality from small datasets. Chemists often synthesize around 100 molecules, measure a key property, and then attempt to identify which molecular features influence that property. This process typically relies on expert intuition to select meaningful features, followed by multivariate linear regression for feature importance analysis.\n",
+    "\n",
+    "Our recent work at the **NSF's Molecule Maker Lab Institute**, published in *Nature*, demonstrated that a **purely data-driven machine learning approach** can:\n",
+    "1. Identify important molecular features previously overlooked by experts.\n",
+    "2. Generate a regression model for photostability that performs well on newly synthesized molecules.\n",
+    "\n",
+    "This approach has shown significant promise in discovering and enhancing **molecular photostability** (e.g., for organic solar cells), and we aim to build upon this success to enable broader data-driven discoveries in chemistry.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# Challenge\n",
+    "\n",
+    "The goal of this competition is to:\n",
+    "> **Identify the best algorithm to select the most informative molecular features and accurately regress the experimental property (T80) for new molecules.**\n",
+    "\n",
+    "You are provided with:\n",
+    "- A small dataset (~100 molecules).\n",
+    "- A large number of calculated (but mostly irrelevant) features.\n",
+    "- An experimental property: **photostability lifetime (T80)**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# Dataset & Resources\n",
+    "\n",
+    "- **Training and test datasets** include ~150 molecular features.\n",
+    "- **SMILES strings** (textual molecular representations) are included.\n",
+    "- Features can be extended using **RDKit** or other cheminformatics tools.\n",
+    "- Example RDKit script is available in the `SmilesStrings Dataset`.\n",
+    "\n",
+    "You may also utilize:\n",
+    "- **Pre-trained models** (e.g., FARM or other SMILES-based models).\n",
+    "- Traditional models without any pre-trained feature extraction.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# Model Development Insights\n",
+    "\n",
+    "In our previous research, we evaluated **Support Vector Regression (SVR)** models trained on approximately **2.5 million combinations** of molecular features.\n",
+    "\n",
+    "Key findings:\n",
+    "- **Top 3 predictive features** identified:\n",
+    "  - `TDOS4.0`\n",
+    "  - `NumHeteroatoms` (number of non-carbon, non-hydrogen atoms)\n",
+    "  - `Mass`\n",
+    "- **TDOS4.0** (and its correlated counterpart `TDOS3.9`) was physically validated.\n",
+    "- **NumHeteroatoms** and **Mass** were not physically analyzed yet — open for discovery.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# Evaluation\n",
+    "\n",
+    "To encourage innovation:\n",
+    "- We have synthesized **9 new molecules** and measured their **T80 values**.\n",
+    "- These will serve as the test set to evaluate submitted models.\n",
+    "\n",
+    "Prizes will be awarded for:\n",
+    "- Best model **using pre-trained SMILES models**.\n",
+    "- Best model **not using pre-trained models** (classical feature-based approach).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Good luck, and happy modeling!\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c75f5066",
