--- a/molecular-machine-learning/molecular.ipynb
+++ b/molecular-machine-learning/molecular.ipynb
@@ -88,6 +88,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aeedd3ad",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- About the Author : Sajjad Ali Shah\n",
+    "- Contact: [Linkedin](www.linkedin.com/in/sajjad-ali-shah-120341305)\n",
+    "- Dataset: \n",
+    "- Date : 02/10/2024\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c75f5066",
