--- a/molecular-machine-learning/molecular.ipynb
+++ b/molecular-machine-learning/molecular.ipynb
@@ -95,7 +95,7 @@
     "---\n",
     "- About the Author : Sajjad Ali Shah\n",
     "- Contact: [Linkedin](www.linkedin.com/in/sajjad-ali-shah-120341305)\n",
-    "- Dataset: \n",
+    "- Dataset: [Link](https://www.kaggle.com/competitions/molecular-machine-learning/overview)\n",
     "- Date : 02/10/2024\n",
     "---"
    ]
