--- a/molecular-machine-learning/molecular.ipynb
+++ b/molecular-machine-learning/molecular.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c75f5066",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns   \n"
+    "import seaborn as sns  \n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
